yyamamoto+sesetup@salesforce.com/src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>最寄駅</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <description>法人契約の承認申請を行う場合の承認者を指定します</description>
        <label>法人契約申請承認者</label>
        <relationshipName>CorporateContractApprovalUser</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <description>請求書作成にあたって請求情報の承認申請を行う場合の承認者を指定します。</description>
        <label>請求確認申請承認者</label>
        <relationshipName>BillingApprovalUser</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>GoogleAddress__c</fullName>
        <label>Googleトランジット用住所</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>x01</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>01. すべてのユーザ</label>
    </listViews>
    <listViews>
        <fullName>x02</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>02. すべての有効ユーザ</label>
    </listViews>
    <listViews>
        <fullName>x03</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>システム管理者</value>
        </filters>
        <label>03. システム管理者ユーザ</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>